# denog-evpn-to-the-host

./: .gitignore  README.md  pyproject.toml
containerlab/: containerlab.yaml
containerlab/configs/: config.yaml
containerlab/configs/bl1/: frr.conf
containerlab/configs/bl2/: frr.conf
containerlab/configs/lf1/: frr.conf
containerlab/configs/lf2/: frr.conf
containerlab/configs/sp1/: frr.conf
containerlab/configs/sp2/: frr.conf
containerlab/configs/srv1/: frr.conf  netplanner.yaml
containerlab/configs/srv2/: frr.conf  netplanner.yaml
containerlab/containers/gobgp/tool/: load-routes.py
containerlab/containers/netplanner-frr/: Dockerfile  netplanner.service
containerlab/scripts/: create-intfs.py  full-table.py  route-dicer.py
docs/: exc_1.md
docs/solutions/: exc_1.md
